<resources>
    <string name="app_name">MiskaaAssigment</string>
    <string name="name">Name :</string>
    <string name="capital">Capital :</string>
    <string name="region">Region : </string>
    <string name="sub_region">Sub-Region :</string>
    <string name="population">Population :</string>
    <string name="borders">Borders :</string>
    <string name="languages">Languages :</string>
    <string name="country_flag">Country Flag</string>
</resources>